# utils

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  sonar-project.properties  utils.cmake.in
src/: CMakeLists.txt  common.h  compat.h  dl.cpp  dl.h  utils.cpp  utils.h
test/: CMakeLists.txt  testDl.cc  testDl.cpp  testInput.cpp  testUtils.cc  testUtils.cpp
